@@ -2,14 +2,12 @@ package com.idata365.app.util.security;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.Charset;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 import javax.crypto.KeyGenerator;
 import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class HMAC {
 
@@ -46,7 +44,7 @@ public class HMAC {
      * @throws Exception
      */
     public static String encryptBase64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return Base64.getEncoder().encodeToString(key);
     }
 
     /**
@@ -56,7 +54,7 @@ public class HMAC {
      * @throws Exception
      */
     public static byte[] decryptBase64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+       return  Base64.getDecoder().decode(key);
     }
 
     /**
